--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -112,7 +112,7 @@ footer a:hover {
   padding: 16px;
   text-align: center;
   opacity: 0.7;
-  background-color: var(#aad4ff);
+  background-color: var(--accent1-color);
   color: #fff;
 }
 .hero article {
