--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -135,6 +135,13 @@ footer {
   margin-top: 3rem;
 }
 
+footer .socialmedia {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
 footer a {
   color: var(--accent1-color);
   text-decoration: none;
@@ -172,7 +179,7 @@ footer a:hover {
 
 .hero article {
   position: absolute;
-  top: 25%;
+  top: 88%;
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.6);
